[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/GemUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/objects/gem.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "spin"

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "spin"

[node name="GemUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="GemSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 998, 25 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite"]
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/rotate = SubResource( 2 )
anims/spin = SubResource( 3 )

[node name="GemSprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 954, 25 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 5
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite2"]
reset_on_save = false
anims/RESET = SubResource( 4 )
anims/rotate = SubResource( 5 )
anims/spin = SubResource( 6 )

[node name="GemSprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 910, 25 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite3"]
reset_on_save = false
anims/RESET = SubResource( 7 )
anims/rotate = SubResource( 8 )
anims/spin = SubResource( 9 )
